Added client interface option to menu bar