@@ -51,21 +51,17 @@ ECHO "[LABS SCRIPT ---------------------]"
 
 ECHO "1. Compiling ......................"
 javac -Xlint -cp ".;%SRCDIR%;" %MAINCLASSSRC% -d %BINDIR% 2> %BINERR%
-::[Another option]: javac -Xlint -cp ".;src;/SOFT/copy/dev/java/javafx/lib/*;/SOFT/COPY/db/derby/lib/*" src/Lab.java -d bin 2> labs-javac.err
-::[Another option]: javac -Xlint -cp ".;%SRCDIR%;%LIBDIR%/*" %MAINCLASSSRC% -d %BINDIR% 2> %BINERR%
+
 
 ECHO "2. Creating Jar ..................."
-XCOPY %SRCDIR% %BINDIR% /E /Y
-DEL /S /Q %BINDIR%\*.java
+::XCOPY %SRCDIR% %BINDIR% /E /Y
 
 CD bin
 jar cvfe %JARNAME% %MAINCLASSBIN% . > ../%JAROUT% 2> ../%JARERR%
-::[Another option]: jar cvfe CST8221.jar Lab . > labs-jar.out 2> labs-jar.err
 
 ECHO "3. Creating Javadoc ..............."
 CD ..
 javadoc -cp ".;%BINDIR%;*" -d %DOCDIR% -subpackages %DOCPACK% 2> %DOCERR%
-::[Another option]: javadoc -cp ".;bin;/SOFT/copy/dev/java/javafx/lib/*;/SOFT/COPY/db/derby/lib/*;/SOFT/COPY/dev/LIBS/jar/javax.servlet.jar" --module-path "C:\SOFT\COPY\dev\LIBS\javafx\lib" --add-modules javafx.controls -d doc -sourcepath src -subpackages CST8221 2> labs-javadoc.err
 
 CD bin
 ECHO "4. Running Jar ...................."
